# ProteinSequenceChatbot

./: .gitignore  README.md  main.py  pyproject.toml
source_file/: llm_function.py  sequence_analysis_function.py  tools.py
